--- a/BK_Details_App/Views/DetailsView.axaml
+++ b/BK_Details_App/Views/DetailsView.axaml
@@ -94,10 +94,10 @@
 						</ListBox.ItemsPanel>
 						<ListBox.ItemTemplate>
 							<DataTemplate>
-								<Border Classes="ItemsLeft" Height="190" Background="{Binding Color}">
-									<Grid ColumnDefinitions="80*, 20*" Height="190">
+								<Border Classes="ItemsLeft" Height="300" Background="{Binding Color}">
+									<Grid ColumnDefinitions="80*, 20*" Height="300">
 										<!--информация-->
-										<Grid Grid.Column="0" RowDefinitions="Auto, *, Auto, *, Auto" Margin="10">
+										<Grid Grid.Column="0" RowDefinitions="Auto, *, Auto, *, Auto, Auto, Auto" Margin="10">
 
 											<StackPanel Grid.Row="0">
 												<TextBlock Classes="Name"  Text="Наименование:" Margin="0 0 0 10"></TextBlock>
@@ -105,17 +105,27 @@
 											<ScrollViewer Grid.Row="1" Height="50" Margin="0 0 15 10" HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Visible">
 												<TextBlock Classes="Name" FontWeight="Bold" Text="{Binding Name}" ToolTip.Tip="{Binding Name}" TextWrapping="Wrap"/>
 											</ScrollViewer>
+											
+											<!--::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::-->
 											<StackPanel Grid.Row="2">
-												<TextBlock Classes="Name" Text="Метка/и:" Margin="0 5 0 0"></TextBlock>
+												<TextBlock IsVisible="{Binding MatchVisible}" Classes="Name"  Text="Наименование материала:" Margin="0 10 0 10"></TextBlock>
 											</StackPanel>
-											<StackPanel Grid.Row="3">
+											<ScrollViewer Grid.Row="3" Height="50" Margin="0 0 15 10" HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Visible">
+												<TextBlock IsVisible="{Binding MatchVisible}" Classes="Name" FontWeight="Bold" Text="{Binding Matched}" ToolTip.Tip="{Binding Matched}" TextWrapping="Wrap"/>
+											</ScrollViewer>
+											<!--::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::-->
+											
+											<StackPanel Grid.Row="4">
+												<TextBlock Classes="Name" Text="Метка/и:"></TextBlock>
+											</StackPanel>
+											<StackPanel Grid.Row="5">
 												<ScrollViewer PointerWheelChanged="OnPointerWheelChanged"
 													HorizontalScrollBarVisibility="Visible" VerticalScrollBarVisibility="Disabled">
 													<TextBlock Classes="Name" Text="{Binding Mark}" ToolTip.Tip="{Binding Mark}" TextWrapping="NoWrap" Margin="0 5 0 15"></TextBlock>
 												</ScrollViewer>
 											</StackPanel>
-											<StackPanel Grid.Row="4">
-												<TextBlock Text="{Binding Quantity, StringFormat='Количество: {0}'}" ToolTip.Tip="{Binding Quantity, StringFormat='Количество: {0}'}" Margin="0 5 0 0"></TextBlock>
+											<StackPanel Grid.Row="6">
+												<TextBlock Text="{Binding Quantity, StringFormat='Количество: {0}'}" ToolTip.Tip="{Binding Quantity, StringFormat='Количество: {0}'}"></TextBlock>
 											</StackPanel>
 										</Grid>
 
